# neko_todo

./: package-lock.json  package.json
.github/workflows/: build.yaml
mariadb/: create_table.sql  table_create.sql
src/: AddTodo.jsx  App.jsx  BasePage.jsx  EditTodo.jsx  Init.jsx  InputTodo.jsx  Login.jsx  PasteTodo.jsx  RegistUser.jsx  TodoItem.jsx  TodoList.jsx  TodoListToolbar.jsx  main.jsx  str2date.jsx  todoitem.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 01_create_table.sql
src-tauri/src/: app_status.rs  command.rs  config.rs  database.rs  lib.rs  main.rs  setup.rs  todo.rs
src-tauri/src/command/: app_state.rs  session.rs  todo.rs  user.rs
src-tauri/src/config/: impl_neko_todo_config.rs  test.rs
src-tauri/src/database/: new.rs  session.rs  test.rs  todo.rs  user.rs
src-tauri/src/todo/: app_state.rs  edit_todo.rs  get_todo.rs  new.rs  test.rs  user.rs
src/theme/: index.jsx  semantics.ts
src/theme/styles/: globalStyle.jsx  index.ts
tex/: .gitignore  list.tex  mariadb  src-rs
