[package]
name = "neko_todo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "neko_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.38", features = ["serde"] }
directories = "5.0.1"
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "mysql", "derive"] }
bcrypt = { version = "0.16.0", features = ["alloc"] }
thiserror = "2.0.4"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["fast-rng", "serde", "v7"] }

