[package]
name = "neko_todo"
version = "0.1.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
#name = "neko_todo_lib"
#crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "derive", "chrono"] }
bcrypt = { version = "0.17", features = ["alloc"] }
thiserror = "2.0"
log = "0.4"
fern = "0.7"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
uuid = { version = "1.11", features = ["fast-rng", "serde", "v7"] }

